--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,13 @@
 <body>
     <h1 id="quiz-title">Guess the Simpsons Episode</h1>
     <div class="container">
-        <div id="crown-container" class="crown-container">
+        <div id="left-crown" class="crown-container">
             <img src="{{ url_for('static', filename='images/crown.png') }}" alt="Crown" style="width: 100%; height: 100%;">
         </div>
-        <div id="correct-text" class="correct-text"></div>
+        <div id="correct-text" class="correct-text">Correct!!</div>
+        <div id="right-crown" class="crown-container">
+            <img src="{{ url_for('static', filename='images/crown.png') }}" alt="Crown" style="width: 100%; height: 100%;">
+        </div>
         <div class="image-container">
             <img id="frame" src="" alt="Random Frame">
         </div>
