--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     <h3>Lifelines</h3>
     <div class="lifeline-buttons">
         <button id="next-frame">Skip Frame</button>
-        <button id="hint">Hint</button>
+        <button id="show-quote">Show Quote</button>
         <button id="double-points">Double Points</button>
     </div>
     <br>
@@ -49,7 +49,7 @@
     <input type="text" id="guess" list="episode-suggestions" placeholder="Enter episode name" aria-label="Episode guess"
            autocomplete="off">
     <datalist id="episode-suggestions"></datalist>
-    <button type="submit">Submit Guess</button>
+    <button type="submit" id="submit-guess">Submit Guess</button>
     <button type="button" id="give-up">Give Up</button>
 </form>
 
